# cool_projects

./: .gitattributes  Readme.md
dex_screen/: Readme.md  docker-compose.yaml  go.mod
dex_screen/cmd/: main.go
dex_screen/internals/server/: server.go
dex_screen/scripts/: env.sh
slack_agent/: Dockerfile  Procfile  README.md  docker-compose.yaml  pyproject.toml
slack_agent/scripts/: env_add.sh
slack_agent/src/agent/: main.py
slack_agent/src/agent/alert/: tracker.py
slack_agent/src/agent/note/: notes.py
slack_agent/src/agent/slack/: client.py
slack_agent/src/agent/summarizer/: summarize.py
