[project]
name = "slack-agent"
version = "0.1.0"
description = "slack ai utilities for day to day use cases"
authors = [{ name = "Bilal Akhtar", email = "nobodyneo666@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["flask (>=3.1.1,<4.0.0)", "slack-sdk (>=3.35.0,<4.0.0)", "slack-bolt (>=1.23.0,<2.0.0)", "websocket-client (>=1.8.0,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
