[project]
name = "slack-agent"
version = "0.1.0"
description = "slack ai utilities for day to day use cases"
authors = [{ name = "Bilal Akhtar", email = "nobodyneo666@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "slack-sdk (>=3.35.0,<4.0.0)",
    "slack-bolt (>=1.23.0,<2.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "slackeventsapi (>=3.0.3,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "openai (>=1.88.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "pypdf (>=5.6.0,<6.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "torch (>=2.7.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
